custom colors and header component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Link from "../components/Link.astro";
+import Header from "../components/Header.astro";
 ---
 
 <Layout title="home">
-  <main class="text-4xl font-mono font-semibold tracking-tight">
-    <header class="flex flex-row items-center justify-between py-6">
-      <div class="text-3xl">rubenbrandao</div>
-      <nav class="text-lg">
-        <Link href="/blog">home</Link>
-        <Link href="/about">about</Link>
-        <Link href="/projects">projects</Link>
-      </nav>
-    </header>
-    <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700" />
+  <main class="font-mono font-medium tracking-tight">
+    <Header />
   </main>
 </Layout>
