stable branch split

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,15 +9,27 @@ import Header from "@components/header/Header";
     <section class="flex flex-col items-start p-5 tracking-tighter">
       <h1 class="text-3xl font-bold py-3">Hello!</h1>
 
-      <p class="astro-FWHD7LWQ">
-        Hey, take a look at the earthlings. Goodbye! Eventually, you do plan to
-        have dinosaurs on your dinosaur tour, right? Jaguar shark! So tell me -
-        does it really exist? Forget the fat lady! You're obsessed with the fat
-        lady! Drive us out of here! I gave it a cold? I gave it a virus. A
-        computer virus.
+      <p class="py-4">
+        Hello and welcome to my website! I apologize for any inconvenience, but
+        I'm currently in the process of overhauling and updating the site. While
+        I work to bring you a better experience, please feel free to connect
+        with me through the following links if you have any questions or just
+        want to chat!
       </p>
 
-      <div class="flex flex-row py-3 space-x-2 items-end">
+      <a class="hover:text-neutral-500" href="mailto:rubenavbrandao@gmail.com"
+        >rubenavbrandao@gmail.com</a
+      >
+      <a class="hover:text-neutral-500" href="https://github.com/rubkn"
+        >github.com/rubkn</a
+      >
+      <a
+        class="hover:text-neutral-500"
+        href="https://www.linkedin.com/in/rubenavbrandao/"
+        >linkedin.com/rubenavbrandao</a
+      >
+
+      <!-- <div class="flex flex-row py-3 space-x-2 items-end">
         <a type="button" href="https://github.com/ruvkn">
           <svg stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6">
             <path
@@ -25,7 +37,7 @@ import Header from "@components/header/Header";
             ></path>
           </svg>
         </a>
-      </div>
+      </div> -->
     </section>
   </main>
 </Main>
