nav links visible

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Header from "@components/header/Header";
         >linkedin.com/rubenvbrandao</a
       >
 
-      <!-- <div class="flex flex-row py-3 space-x-2 items-end">
+      <div class="flex flex-row py-3 space-x-2 items-end">
         <a type="button" href="https://github.com/ruvkn">
           <svg stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6">
             <path
@@ -37,7 +37,7 @@ import Header from "@components/header/Header";
             ></path>
           </svg>
         </a>
-      </div> -->
+      </div>
     </section>
   </main>
 </Main>
