--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ import Header from "@components/header/Header";
       >
       <a
         class="hover:text-neutral-500"
-        href="https://www.linkedin.com/in/rubenavbrandao/"
-        >linkedin.com/rubenavbrandao</a
+        href="https://www.linkedin.com/in/rubenvbrandao/"
+        >linkedin.com/rubenvbrandao</a
       >
 
       <!-- <div class="flex flex-row py-3 space-x-2 items-end">
