feat: blog posts and github repos

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,13 @@
 ---
 import Main from "@layouts/Main.astro";
-import Header from "@components/header/Header";
+import Header from "@components/Header";
 ---
 
 <Main title="home">
   <main class="font-mono font-medium tracking-tight">
     <Header client:load />
     <section class="flex flex-col items-start p-5 tracking-tighter">
-      <h1 class="text-3xl font-bold py-3">Blog</h1>
+      <h1 class="text-3xl font-bold py-3">Hello!</h1>
 
       <p class="astro-FWHD7LWQ">
         Hey, take a look at the earthlings. Goodbye! Eventually, you do plan to
@@ -17,7 +17,7 @@ import Header from "@components/header/Header";
         computer virus.
       </p>
 
-      <div class="flex flex-row py-3 space-x-2 items-end">
+      <!-- <div class="flex flex-row py-3 space-x-2 items-end">
         <a type="button" href="https://github.com/ruvkn">
           <svg stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6">
             <path
@@ -25,7 +25,7 @@ import Header from "@components/header/Header";
             ></path>
           </svg>
         </a>
-      </div>
+      </div> -->
     </section>
   </main>
 </Main>
