--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 }
 
 *::selection {
-  @apply bg-none text-black-500;
+  @apply bg-white-500 text-black-500;
 }
 
 ::-webkit-scrollbar-track {
@@ -21,9 +21,9 @@
 }
 
 body {
-  @apply w-screen h-screen max-w-prose m-auto font-sans bg-white-500 text-black-500 /* dark:bg-black-500 dark:text-white-500 */;
+  @apply w-screen h-screen max-w-prose m-auto font-sans bg-black-500 text-white-500 bg-topography bg-blend-color-burn /* dark:bg-black-500 dark:text-white-500 */;
 }
 
 a {
-  @apply hover:text-indigo-500 /* dark:hover:text-orange-500 */;
+  @apply hover:text-indigo-500 transition-all /* dark:hover:text-orange-500 */;
 }
