style: added prettier tailwind

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Header from "@components/Header";
   <main class="font-mono font-medium tracking-tight">
     <Header client:load />
     <section class="flex flex-col items-start p-5 tracking-tighter">
-      <h1 class="text-3xl font-bold py-3">Hello!</h1>
+      <h1 class="py-3 text-3xl font-bold">Hello!</h1>
 
       <p class="astro-FWHD7LWQ">
         Hey, take a look at the earthlings. Goodbye! Eventually, you do plan to
