styles: small changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ const { pinnedItems } = await usePinnedRepos();
 ---
 
 <Main title="home">
-  <main class="h-screen w-full font-test font-medium tracking-tight">
+  <main class="h-screen w-full font-mono font-medium">
     <Header client:load />
     <section class="flex flex-col items-start px-5 py-10 tracking-tighter">
-      <h1 class="py-3 text-3xl font-bold">Ruben Brandão!</h1>
+      <h1 class="py-3 text-2xl font-bold">Ruben Brandão!</h1>
 
       <p class="py-4">
         Hello and welcome to my website! I apologize for any inconvenience, but
@@ -38,7 +38,7 @@ const { pinnedItems } = await usePinnedRepos();
         </a>
       </div> -->
     </section>
-    <hr class="mx-5 h-px border-0 bg-neutral-300" />
+    <hr class="mx-5 h-px border-0 bg-black-400" />
     <section class="grid w-full grid-cols-2 gap-4 px-5 py-10">
       {
         pinnedItems.map((item) => (
